# server

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATA_LICENSES.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  _typos.toml  compose.dev.yaml  compose.yaml
.config/: _typos.toml  deny.toml
.github/workflows/: ci.yml  images.yml
crates/iter-contracts/: Cargo.toml
crates/iter-contracts/src/: geo.rs  health.rs  lib.rs  live_trains.rs  offline.rs  places.rs  reliability.rs
crates/iter-core/: Cargo.toml
crates/iter-core/src/: config.rs  error.rs  health.rs  lib.rs  metrics.rs  shutdown.rs  telemetry.rs
crates/iter-core/src/reliability/: mod.rs  rollup.rs  store_read.rs
crates/iter-gateway/: Cargo.toml
crates/iter-gateway/src/: address.rs  annotate.rs  cache.rs  config.rs  correlate.rs  enrich.rs  glyphs.rs  health.rs  http.rs  legkey.rs  lib.rs  live_trains.rs  main.rs  manifest.rs  metrics.rs  offline.rs  overlays.rs  proxy.rs  reliability.rs  reliability_cache.rs  request_id.rs  rerank.rs  router.rs  sprite.rs  state.rs  styles.rs  tiles.rs  trenitalia.rs  weather.rs
crates/iter-gateway/src/regions/: mod.rs
crates/iter-gateway/src/regions/italy/: address.rs  live_trains.rs  mod.rs
crates/iter-gateway/tests/: gateway.rs
crates/iter-pipeline/: Cargo.toml
crates/iter-pipeline/src/: context.rs  fsx.rs  main.rs  runner.rs  step.rs
crates/iter-pipeline/src/regions/: mod.rs
crates/iter-pipeline/src/regions/italy/: mod.rs  rome.rs
crates/iter-pipeline/src/steps/: build_config.rs  civici.rs  graph.rs  gtfs.rs  health.rs  mod.rs  osm.rs  osm_clip.rs  overlay.rs  photon.rs  places.rs  router_config.rs  styles.rs  tiles.rs
crates/iter-region/: Cargo.toml
crates/iter-region-drivers/: Cargo.toml
crates/iter-region-drivers/src/: lib.rs  registry.rs  traits.rs
crates/iter-region-drivers/src/italy/: address.rs  live_trains.rs  mod.rs  netex.rs  rome.rs
crates/iter-region/src/: lib.rs  profile.rs  resolved.rs
crates/iter-worker/: Cargo.toml
crates/iter-worker/src/: gtfs_rt.rs  job.rs  main.rs  netex.rs  scheduler.rs  shapes.rs
crates/iter-worker/src/jobs/: fl_gtfs.rs  mod.rs  reliability_rollup.rs  rt_reliability.rs
crates/iter-worker/src/regions/: mod.rs
crates/iter-worker/src/regions/italy/: mod.rs  netex.rs
crates/iter-worker/src/reliability/: mod.rs  rollup.rs  store.rs
docker/: Dockerfile  compose.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_LICENSES.md  DEVELOPMENT.md  OVERVIEW.md  TELEMETRY.md
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-rust-coordinator-fronting-external-engines.md  0003-kubernetes-ready-evolution-of-single-host.md  0004-single-gateway-binary.md  0005-layered-licensing-reuse-dco.md  0006-strict-ci-and-testing-bar.md  0007-offline-extraction-via-go-pmtiles.md  0008-region-model-nested-profiles.md  0009-otp-graph-built-in-pipeline.md  0010-self-hosted-photon-with-civici-in-index.md  0011-place-enrichment-open-first-in-bff.md  0012-address-correlation-build-it-yourself.md  0013-gateway-resolves-region.md  0014-pure-rust-overlay-geometry.md  0015-gtfs-rt-ingestion-vendored-prost.md  0016-fl-netex-to-gtfs-converter.md  0017-region-drivers-config-and-code.md  0018-region-drivers-in-one-crate.md  0019-worker-resolves-region-feed-urls.md  0020-otp-consumes-region-gtfs-rt-for-live-routing.md  0021-fl-calendar-from-validdaybits.md  0022-reliability-rollup-tier.md  0023-tier2-rebuild-and-easter-monday.md  0024-reliability-read-endpoint.md  0025-styles-generated-by-pipeline.md  0026-gateway-soft-itinerary-reranking.md  0027-rerank-id-normalization.md  0028-rerank-composite-soft-factors.md  0029-multi-region-transit-overlay-model.md  0030-no-rt-historical-delay-annotation.md  0031-concourse-corridor-union.md  0032-gateway-tier2-read-cache.md  0033-weather-aware-rerank-factor.md  0034-weather-fetch-bounded-and-day-pinned.md  0035-mode-aware-weather-exposure.md  0036-per-segment-multi-point-weather.md  0037-observability-structured-logs-and-correlation.md  README.md
docs/roadmap/: README.md  crowd-telemetry.md  historical-reliability.md  italy-europe-rail.md  personalized-planning.md  place-discovery.md  region-decoupling.md  scoped-overlay-delivery.md  stations-pathways.md  synchronization.md  traffic-data.md  unified-overlay-network.md
regions/italy/: region.toml
regions/italy/lazio/: region.toml
regions/italy/lazio/rome/: region.toml
