[workspace]
resolver = "3"
members = [
    "crates/iter-core",
    "crates/iter-contracts",
    "crates/iter-region",
    "crates/iter-gateway",
    "crates/iter-pipeline",
    "crates/iter-worker",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
repository = "https://github.com/iter-maps/server"
authors = ["Iter Maps contributors"]
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs", "time", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
bytes = "1"
jiff = "0.2"
async-trait = "0.1"
tempfile = "3"
zip = { version = "2", default-features = false }
toml = "0.8"

iter-core = { path = "crates/iter-core" }
iter-contracts = { path = "crates/iter-contracts" }
iter-region = { path = "crates/iter-region" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
