[package]
name = "iter-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Iter Maps edge/BFF: serves tiles, styles, overlays, offline, live-trains and health; reverse-proxies routing and geocoding."

[lib]
name = "iter_gateway"
path = "src/lib.rs"

[[bin]]
name = "iter-gateway"
path = "src/main.rs"

[dependencies]
iter-core = { workspace = true }
iter-contracts = { workspace = true }
iter-region = { workspace = true }
iter-region-drivers = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
jiff = { workspace = true }
tempfile = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
