[package]
name = "iter-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
description = "Background jobs: scheduled, idempotent tasks (FL-GTFS build; planned RT polling, reliability rollups)."

[[bin]]
name = "iter-worker"
path = "src/main.rs"

[dependencies]
iter-core = { workspace = true }
iter-region = { workspace = true }
iter-region-drivers = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
prost = { workspace = true }
quick-xml = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
osmpbf = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
